added meta just to be safe

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Mr. Loftus is running for re-election to the Eagle Sewer Board.
+  This is an Ada County election and takes place May 16, 2023. He
+  has served on the Board since 2013. His knowledge of sewer systems
+  is multi-generational."
+    />
+    <meta
+      name="keywords"
+      content="Eagle, Eagle Idaho, Eagle Idaho Sewer District, Eagle Sewer District, Terry Loftus, Terry Loftus Eagle, Terry Loftus Idaho, Terry Loftus Sewer Board,"
+    />
     <title>Terry Loftus</title>
   </head>
   <body>
