--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="Eagle, Eagle Idaho, Eagle Idaho Sewer District, Eagle Sewer District, Terry Loftus, Terry Loftus Eagle, Terry Loftus Idaho, Terry Loftus Sewer Board,"
+      content="Eagle, Eagle Idaho, Eagle Idaho Sewer District, Eagle Sewer District, Terry Loftus, Terry Loftus Eagle, Terry Loftus Idaho, Terry Loftus Sewer Board, Ada County Elections, Ada County"
     />
     <title>Terry Loftus</title>
   </head>
