addtional robots txt

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       name="keywords"
       content="Eagle, Eagle Idaho, Eagle Idaho Sewer District, Eagle Sewer District, Terry Loftus, Terry Loftus Eagle, Terry Loftus Idaho, Terry Loftus Sewer Board, Ada County Elections, Ada County"
     />
+    <meta name="robots" content="ALL, index, follow" />
     <title>Terry Loftus</title>
   </head>
   <body>
