--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       content="Eagle, Eagle Idaho, Eagle Idaho Sewer District, Eagle Sewer District, Terry Loftus, Terry Loftus Eagle, Terry Loftus Idaho, Terry Loftus Sewer Board, Ada County Elections, Ada County"
     />
     <meta name="robots" content="ALL, index, follow" />
+    <urlset xmlns="https://www.sitemaps.org/schemas/sitemap/0.9">
+      <url>
+        <loc>https://www.terryloftus.us/</loc>
+        <lastmod>2023-04-07</lastmod>
+        <changefreq>monthly</changefreq>
+        <priority>1.0</priority>
+      </url>
+    </urlset>
     <title>Terry Loftus</title>
   </head>
   <body>
